fixed stylings, wrapped project with browserRouter

--- a/src/components/ProfileData/ProfileData.scss
+++ b/src/components/ProfileData/ProfileData.scss
@@ -189,3 +189,9 @@
     }
   }
 }
+
+.delete__user {
+  .MuiTouchRipple-root {
+    color: red;
+  }
+}
